welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: Missing closing brace `}' assumed here
def fairemotif(){
^PictureMono2:26: error: expected start of definition
override def run() {
         ^